2005-11-18  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/base.py (PyDO._joinTableSQL): fix for berlios bug #5665
	-- bind values being passed in wrong order.
	
	* tests/test_base.py (test_getCount1): test for getCount.

	* src/pydo/base.py (PyDO.getCount): adding getCount convenience
	method (closes bug #4712).

2005-11-17  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/__init__.py (__version__): upping version number to
	2.0rc1. 

	* doc/manual.rst: document the new module parameters to project
	and autoschema.

	* src/pydo/base.py (PyDO.project): use moduleize when passed in a
	module. (autoschema): ditto.

	* src/pydo/utils.py (moduleize): convenience function for
	associating a dynamically created class with a module, in order
	to pickle or unpickle it.

	* tests/test_base.py (test_one_to_many3): test for 1-2->1 bug.

	* src/pydo/base.py (PyDO._update_raw): use new has_sane_rowcount
	flag.  This fixes berlios bug #5521.
	(ForeignKey.getMany): fix for passing a sql string (various typos
	and thinkos) reported by Jonan Santiago, much thanks.

	* src/pydo/drivers/mysqlconn.py: set has_sane_rowcount to False.

	* src/pydo/dbi.py (has_sane_rowcount): new flag for driver
	classes, indicating whether we ought to take rowcount seriously or
	not. 

	* tests/test_base.py (test_update2): excluding mysql from this
	test, which mysql can't run successfully without failing another
	test. 

2005-10-12  Jacob Smullyan  <smulloni@smullyan.org>

	* tests/test_operators.py (test_pickle1), tests/test_fields.py
	(test_pickle1): tests for pickling. 

	* src/pydo/operators.py, src/pydo/fields.py: define __getstate__
	and __setstate__ for objects with slots.

	* setup.py: now use setuptools.

2005-10-07  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/multifetch.py (iterfetch): fixed silly error that
	prevented pyformat or named style parameter passing from working.

2005-09-19  Jacob Smullyan  <smulloni@smullyan.org>
